# Practice_ROS2

./: .gitignore  README.md
ros2_ws_0/: frames_2025-01-02_13.43.43.gv
ros2_ws_0/src/ur_robotiq_description/: CMakeLists.txt
ros2_ws_0/src/ur_robotiq_description/rviz/: rviz_config.rviz
ros2_ws_0/src/ur_robotiq_description/urdf/: ur3e_urdf.xacro
ros2_ws_1/src/cpp_package_practical_1/: CMakeLists.txt  package.xml
ros2_ws_1/src/cpp_package_practical_1/src/: node_cpp.cpp  parameters_cpp.cpp  service_cpp_client.cpp  service_cpp_server.cpp  topic_cpp_publisher.cpp  topic_cpp_subscriber.cpp
ros2_ws_1/src/launch_package/: CMakeLists.txt  package.xml
ros2_ws_1/src/py_package_practical_1/: package.xml  setup.cfg  setup.py
ros2_ws_1/src/py_package_practical_1/py_package_practical_1/: lifecycle_node_manager_py.py  lifecycle_py.py  node_py.py  parameters_py.py  service_client_py.py  service_server_py.py  topic_py.py
ros2_ws_2/src/: README.md
ros2_ws_2/src/robot_camera_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_camera_sensor/topicsbridge/: topicbridge.yaml
ros2_ws_2/src/robot_camera_sensor/urdf/: mobile_base_gazebo.xacro
ros2_ws_2/src/robot_contact_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_contact_sensor/topicsbridge/: topicbridge.yaml
ros2_ws_2/src/robot_contact_sensor/urdf/: common_properties.xacro  mobile_base_gazebo.xacro
ros2_ws_2/src/robot_contact_sensor/worlds/: new.sdf
ros2_ws_2/src/robot_depth_camera_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_depth_camera_sensor/topicsbridge/: topicbridge.yaml
ros2_ws_2/src/robot_depth_camera_sensor/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro
ros2_ws_2/src/robot_depth_camera_sensor/worlds/: new.sdf
ros2_ws_2/src/robot_depth_with_camera_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_depth_with_camera_sensor/topicsbridge/: topicbridge.yaml
ros2_ws_2/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_gps_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_imu_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_lidar_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/robot_thermal_camera_sensor/: CMakeLists.txt  package.xml
ros2_ws_2/src/sdf_robot_description/: CMakeLists.txt  package.xml
ros2_ws_3/: frames_2024-12-23_17.54.01.gv  frames_2024-12-23_17.59.21.gv
ros2_ws_3/src/robot_description/: CMakeLists.txt  package.xml
(+28 files in other folders)
